force-app/main/default/objects/refedge__Nomination__c/refedge__Nomination__c.object-meta.xml
<CustomObject>
    <description>Custom Object to Store Nominations.(Bound 4)</description>
    <label>Nomination</label>
    <nameField>
        <displayFormat>NM-{00000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>