force-app/main/default/objects/refedge__Nomination__c/fields/refedge__Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.refedge__Account__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nominations</relationshipLabel>
    <relationshipName>Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>