force-app/main/default/objects/refedge__Nomination__c/fields/refedge__Disposition__c.field-meta.xml
<CustomField>
    <fullName>refedge__Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>