force-app/main/default/objects/refedge__Nomination__c/fields/refedge__Manager__c.field-meta.xml
<CustomField>
    <fullName>refedge__Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>