force-app/main/default/objects/refedge__Nomination__c/fields/refedge__Note__c.field-meta.xml
<CustomField>
    <fullName>refedge__Note__c</fullName>
    <label>Disposition Comment</label>
    <type>TextArea</type>
</CustomField>