force-app/main/default/objects/refedge__Nomination__c/fields/refedge__Other_Info__c.field-meta.xml
<CustomField>
    <fullName>refedge__Other_Info__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>