force-app/main/default/objects/refedge__Nomination__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Contact__c</columns>
    <columns>refedge__Status__c</columns>
    <columns>refedge__Disposition__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>refedge__Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>